fixed about layout on mobile

--- a/styles/utility/mediaqueries.sass
+++ b/styles/utility/mediaqueries.sass
@@ -138,6 +138,7 @@
 					display: flex
 					flex-direction: column
 					align-items: center
+					flex-basis: auto
 					p
 						text-align: justify
 						text-align-last: center
